# biometric-system-management-isp

./: .dockerignore  .gitignore  Calendar.py  Collections.py  Day.py  Dockerfile  Encoding.py  Event.py  Gender.py  Makefile  Ministry.py  Mongodb.py  Name.py  Person.py  Photo.py  PhotoCategory.py  Presence.py  README.md  Recognition.py  Sunday.py  compare.py  config.py  crop.py  db_config.py  docker-compose.yml  face_distance_plotter.py  fb_albums_download.py  fb_photos.py  fr_encodings.py  isp.txt  populate_db.py  pyproject.toml  requirements.txt  rpi.py  rtsp.py  save_encodings.py  script_compare.sh  script_encode.sh  scripts.js  server.py  (+5 more)
api/: configuration.py  image.py  management.py  signaling.py
backend/: .dockerignore  Dockerfile  Dockerfile.base  README.md  build_image.sh  config.py  pyproject.toml  server.py
backend/api/: configuration.py  event.py  image.py  management.py  phone_number.py
backend/database/: ConfigCollection.py  MembersCollection.py  MongoConnector.py
backend/entities/: Calendar.py  Encoding.py  Event.py  Gender.py  Person.py  Presence.py
backend/recognition/: Recognition.py
backend/scripts/: populate_db.py
backend/utils/: logger.py
database/: ConfigCollection.py  EncodingsCollection.py  EventsCollection.py  ImagesCollection.py  MembersCollection.py  MongoConnector.py  Mongodb.py  sundays.py
entities/: Calendar.py  Collections.py  Day.py  Encoding.py  Event.py  Ministry.py  Name.py  Person.py  Photo.py  PhotoCategory.py  PhotoMode.py  Presence.py  Sunday.py
frontend/: .gitignore  Dockerfile  README.md  build_image.sh  (+5 more)
(+232 files in other folders)
