[tool.poetry]
name = "biometric-system-management-isp"
version = "0.1.0"
description = ""
authors = ["Andrew Chuang <andrewjschuang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "==3.1.0"
flask-cors = "==4.0.2"
flask-socketio = "==5.5.1"
numpy = "==1.26.4"
pillow = "==10.4.0"
openpyxl = "==3.1.5"
face-recognition = "==1.3.0"
face-recognition-models = "==0.3.0"
requests = "==2.32.3"
opencv-python = "==4.11.0.86"
opencv-contrib-python = "4.9.0.80"
websockets = "==12.0"
pymongo = "==4.12.1"
dlib = "==19.24.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
